--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Kibbles
-description: Warning: Nerdy posts
+description: Warning Nerdy posts
 meta_description: "Mainly for Interactive Design 1 for now"
 
 aboutPage: true
